--- a/presentacion/assets/css/style_login.css
+++ b/presentacion/assets/css/style_login.css
@@ -14,7 +14,7 @@
     overflow-x:hidden;
     font-family: 'Quicksand', sans-serif;
     text-align: center;
-    background-image: url("../recursos/fondo_Sisviansa.png");
+    background-image: url("../recursos/fondo_Sisviansa.webp");
     background-repeat:no-repeat;
     background-size: contain;
     background-attachment: fixed;
