--- a/presentacion/assets/css/style_dietas.css
+++ b/presentacion/assets/css/style_dietas.css
@@ -16,7 +16,7 @@
     height: 80vh;
     font-family: 'Quicksand', sans-serif;
     text-align: center;
-    background-image: url("../recursos/fondo_Sisviansa.png");/*uso .. porque la carpeta esta atras*/
+    background-image: url("../recursos/fondo_Sisviansa.webp");/*uso .. porque la carpeta esta atras*/
     background-repeat:repeat;
     background-size: contain;
     background-attachment: fixed;
