--- a/presentacion/assets/css/style_viandas.css
+++ b/presentacion/assets/css/style_viandas.css
@@ -248,6 +248,17 @@ label {
   border-radius: 4px;
 }
 
+.img-carrito {
+  width: 40px;
+  height: 40px;
+  margin-top: 10px;
+  margin-right: 10px;
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid var(--bordo);
+  border-radius: 4px;
+}
+
 h2 {
   color: var(--bordo);
   font-style: oblique;
@@ -442,7 +453,7 @@ h1 {
   font-size: 18px;
   cursor: pointer;
   margin-bottom: 20px;
-  transition: 0.25s ease background;
+  transition: 0.25s ease background-color;
 }
 
 .pagar:hover {
@@ -486,7 +497,7 @@ h1 {
 
 .carrito {
   width: 400px;
-  height: 40px;
+
   margin-left: 80px;
   margin-bottom: 10px;
   flex: 1; /*ocupa todo el espacio disponible horizontalmente*/
@@ -495,7 +506,7 @@ h1 {
   align-items: center;
   padding: 10px;
   border-color: var(--hospital-green);
-  border-radius: 10px;
+ 
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   box-sizing: border-box;
