--- a/presentacion/assets/css/style.css
+++ b/presentacion/assets/css/style.css
@@ -1,10 +1,10 @@
 :root {
-  --white: #FFFFFF;
+  --white: #ffffff;
   --black: #000000;
   --blue: #0000ff;
-  --very-light-pink: #C7C7C7;
-  --text-input-field: #F7F7F7;
-  --hospital-green: #ACD9B2;
+  --very-light-pink: #c7c7c7;
+  --text-input-field: #f7f7f7;
+  --hospital-green: #acd9b2;
   /*(172,217,178)*/
   --bordo: rgb(136, 30, 12);
   --sm: 14px;
@@ -22,7 +22,7 @@ body {
   box-sizing: border-box;
   font-family: 'Quicksand', sans-serif;
   text-align: center;
-  background-image: url("../recursos/fondo_Sisviansa.webp");
+  background-image: url('../recursos/fondo_Sisviansa.webp');
   /*uso .. porque la carpeta esta atras*/
   background-repeat: no-repeat;
   background-size: contain;
@@ -122,12 +122,6 @@ nav {
   place-items: center;
 }
 
-.form-container {
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  width: 300px;
-}
-
 .logo2 {
   width: 150px;
   margin-bottom: 48px;
@@ -145,7 +139,7 @@ nav {
 .carrusel {
   width: 45vw;
   height: 65vh;
-  content: "";
+  content: '';
   margin-top: 65px;
   margin-left: 85px;
   margin-right: 50px;
@@ -156,12 +150,24 @@ nav {
   z-index: 3;
 }
 
+.form-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-right: auto;
+  display: contents;
+  justify-content: flex-start; /* Centrar horizontalmente los elementos */
+}
+
+.form-list li {
+  margin: 0 10px; /* Espacio entre elementos */
+}
+
 .carousel-item {
-  border: solid 5px #ACD9B2;
+  border: solid 5px #acd9b2;
   /*width: 45vw;
   height: 65vh;*/
 }
-
 
 .text {
   width: 50vw;
@@ -172,10 +178,10 @@ nav {
 }
 
 .input_menues {
-  border-color: #ACD9B2;
+  border-color: #acd9b2;
   width: 30vw;
   height: 65vh;
-  margin-top: 110px;
+  /*margin-top: 110px;*/
   margin-left: 100px;
   margin-right: 50px;
   transform-origin: top right;
@@ -183,27 +189,27 @@ nav {
 }
 
 form {
-  border-color: #ACD9B2;
+  border-color: #acd9b2;
   width: 30vw;
   height: 65vh;
-  margin-top: 110px;
+  /*margin-top: 110px;
   margin-left: 100px;
-  margin-right: 50px;
+  margin-right: 50px;*/
 }
 
 h5 {
-  background-color: #ACD9B2;
+  background-color: #acd9b2;
   opacity: 0.5;
 }
 
 .botons {
-  background-color: #ACD9B2;
+  background-color: #acd9b2;
   border-radius: 8px;
   opacity: 0.6;
 }
 
 .control {
-  border-color: #ACD9B2;
+  border-color: #acd9b2;
   border-radius: 5px;
 }
 
@@ -242,7 +248,7 @@ h5 {
   max-width: 500px;
   transform: scale(0.6);
   opacity: 0;
-  transition: .3s ease all;
+  transition: 0.3s ease all;
 }
 
 .pop-up-title {
@@ -303,7 +309,6 @@ h5 {
   font-size: 80px;
 }
 
-
 .pop-up-title p {
   font-size: 20px;
   font-weight: 300;
@@ -334,7 +339,7 @@ h5 {
 .sub-content h2 {
   font-weight: 500;
   font-size: 40px;
-  color: #1F4068;
+  color: #1f4068;
   margin-bottom: 15px;
 }
 
@@ -359,14 +364,14 @@ h5 {
   padding: 15px;
   border: none;
   border-radius: 10px;
-  color: #1F4068;
+  color: #1f4068;
   /*no funciona*/
   background: var(--hospital-green);
   color: #fff;
   font-size: 18px;
   cursor: pointer;
   margin-bottom: 20px;
-  transition: .25s ease background-color;
+  transition: 0.25s ease background-color;
 }
 
 .pagar:hover {
@@ -376,7 +381,7 @@ h5 {
 .line {
   width: 100%;
   height: 20px;
-  background: #1F4068;
+  background: #1f4068;
 }
 
 #close {
@@ -413,14 +418,14 @@ h5 {
 .carrito {
   width: 400px;
   height: 40px;
-  flex: 1;/*ocupa todo el espacio disponible horizontalmente*/
+  flex: 1; /*ocupa todo el espacio disponible horizontalmente*/
   display: flex; /* Los elementos dentro de la lista se alinearán horizontalmente */
   margin: 10px 0; /* Agrega un margen entre las listas */
   align-items: center;
   padding: 10px;
   border-color: var(--hospital-green);
   border-radius: 10px;
-  border: 1px solid rgba(0, 0, 0, .1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   box-sizing: border-box;
   overflow: hidden;
@@ -430,7 +435,7 @@ h5 {
 .input-cant {
   width: 30px;
   height: 26px;
-  border: 1PX solid rgba(10, 1, 1, 0.267);
+  border: 1px solid rgba(10, 1, 1, 0.267);
   border-radius: 2px;
   background-color: var(--text-input-field);
 }
@@ -549,7 +554,6 @@ footer {
   .pop-up-title {
     display: none;
   }
-
 }
 
 @media only screen and (max-width: 320px) {
@@ -591,19 +595,11 @@ footer {
   }
 
   input {
-    position: center;   
-     width: 90px;
-
+    position: center;
+    width: 90px;
   }
-.navbar-left{
-  display: none;
-}
-  .form-login {
-    width: 55vw;
-    height: 35vh;
-    margin: auto;
-    margin-top: 190px;
-    border-radius: 60%;
+  .navbar-left {
+    display: none;
   }
 
   .navbar-right ul {
@@ -636,12 +632,12 @@ footer {
     justify-content: center;
     align-items: center;
   }
-  .input_menues{
+  .input_menues {
     margin-top: 700px;
     justify-content: center;
     transform: none;
   }
-  input{
+  input {
     margin-bottom: 10px;
   }
 }
