arreglo de todas las rutas de imagenes

--- a/presentacion/assets/css/style.css
+++ b/presentacion/assets/css/style.css
@@ -258,7 +258,7 @@ h5 {
   justify-content: center;
   align-items: center;
   position: relative;
-  background-image: url('../recursos/dieta/menu1/garbanzos-con-tomatitos-y-atun.jpg');
+  background-image: url('../recursos/viandas/63.jpg');
   background-size: 165%;
   background-position: center;
   background-repeat: no-repeat;
