--- a/presentacion/assets/css/style.css
+++ b/presentacion/assets/css/style.css
@@ -32,7 +32,7 @@ body {
 
 nav {
   display: flex;
-  width: 100vw;
+  width: 99.5%;
   height: 58px;
   justify-content: space-between;
   padding: 0 -100px;
