--- a/presentacion/assets/css/style_dietas.css
+++ b/presentacion/assets/css/style_dietas.css
@@ -23,16 +23,19 @@
   }
   nav {
     display: flex;
-    width: 100%;
+    width: 90%;
     height: 58px;
     justify-content: space-between;
-    padding: 0 -100px;
-    margin-top: auto;
+    margin-top: 10px;
+    margin-left: 50px;
+    margin-right: 20px;
+    border-radius: 20px;
     border-bottom: 1px solid var(--very-light-pink);
     background-color: papayawhip;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     position: fixed;
-    top:0;
-    z-index:5;
+    top: 0;
+    z-index: 5;
   }
   .menu {
     display: none;
@@ -46,7 +49,6 @@
   .navbar-left ul,
   .navbar-right ul {
     list-style: none;
-    padding: 0;
     margin: 0;
     display: flex;
     align-items: center;
@@ -56,8 +58,8 @@
   .navbar-left {
     display: flex;
   }
-  .navbar-left ul {
-    margin-left: 12px;
+  .navbar-right ul {
+    margin-right: 365px;
   }
   .navbar-left ul li a,
   .navbar-right ul li a {
@@ -89,13 +91,12 @@
     font-weight: bold;
     position: absolute;
     top: -6px;
-    right: -3px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   .login {
-    width: 100%;
+    width: 100px;
     display: grid;
     place-items: center;
   }
