--- a/presentacion/assets/css/style_registro.css
+++ b/presentacion/assets/css/style_registro.css
@@ -12,7 +12,6 @@
 }
 body {
   margin: 0;
-  /*position: fixed;*/
   font-family: 'Quicksand', sans-serif;
   background-image: url('../recursos/fondo_hd.png');
   background-repeat: no-repeat;
@@ -21,13 +20,20 @@ body {
 }
 nav {
   display: flex;
-  width: 100%;
+  width: 90%;
   height: 58px;
   justify-content: space-between;
   padding: 0 -100px;
+  margin-top: 10px;
+  margin-left: 50px;
+  margin-right: 20px;
+  border-radius: 20px;
   border-bottom: 1px solid var(--very-light-pink);
   background-color: papayawhip;
-  position: top; /*fixed*/
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  z-index: 5;
 }
 .header {
   margin: 8px;
@@ -39,7 +45,7 @@ nav {
 }
 
 h2 {
-  margin-top: 23px;
+  margin-top: 100px;
   text-align: center;
   color: rgb(138, 21, 56);
 }
@@ -88,6 +94,7 @@ input:hover {
   width: 227px;
   height: 151px;
   margin-right: 0;
+  opacity: 0.7;
 }
 .navbar-left ul,
 .navbar-right ul {
@@ -103,6 +110,9 @@ input:hover {
 }
 .navbar-left ul {
   margin-left: 12px;
+}
+.navbar-right ul {
+  margin-right: 35px;
 }
 .navbar-left ul li a,
 .navbar-right ul li a {
